added firebase to the project also added sign-in component with google sign-in

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,51 @@
         "item",
         "menu",
         "menu item"
+    ],
+    "cSpell.ignoreWords": [
+        "a",
+        "akpqgtiw",
+        "api",
+        "api key a iza sy hj q ze o k u g pfx hb akpqgtiw auth domain crwn db f firebaseapp com database url https firebaseio project id storage bucket appspot messaging sender app web d ffe c measurement kl swrb x",
+        "app",
+        "appspot",
+        "auth",
+        "bucket",
+        "c",
+        "com",
+        "crwn",
+        "d",
+        "database",
+        "db",
+        "domain",
+        "f",
+        "ffe",
+        "firebaseapp",
+        "firebaseio",
+        "firestore",
+        "g",
+        "hb",
+        "hj",
+        "https",
+        "id",
+        "iza",
+        "k",
+        "key",
+        "kl",
+        "measurement",
+        "messaging",
+        "o",
+        "pfx",
+        "project",
+        "q",
+        "sender",
+        "storage",
+        "swrb",
+        "sy",
+        "u",
+        "url",
+        "web",
+        "x",
+        "ze"
     ]
 }
