added redux and implemented user reducer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "kl",
         "measurement",
         "messaging",
+        "middlewares",
         "o",
         "pfx",
         "project",
