--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "auth",
         "bucket",
         "c",
+        "cart",
         "com",
         "crwn",
         "d",
@@ -27,6 +28,7 @@
         "firestore",
         "g",
         "hb",
+        "hidden",
         "hj",
         "https",
         "id",
@@ -45,6 +47,8 @@
         "storage",
         "swrb",
         "sy",
+        "toogle",
+        "toogle cart hidden",
         "u",
         "url",
         "web",
