added selectores to the project to make re-rendering of componenets more efficient

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     ],
     "cSpell.ignoreWords": [
         "a",
+        "accumalated",
+        "accumalated quantity",
         "akpqgtiw",
         "api",
         "api key a iza sy hj q ze o k u g pfx hb akpqgtiw auth domain crwn db f firebaseapp com database url https firebaseio project id storage bucket appspot messaging sender app web d ffe c measurement kl swrb x",
@@ -43,6 +45,7 @@
         "pfx",
         "project",
         "q",
+        "quantity",
         "sender",
         "storage",
         "swrb",
